@@ -7,22 +7,22 @@ MD5 33cdd958f1be433095a69bff6be18148 files/emacs-cvs-freebsd-sparc.patch 475
 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.patch 475
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.97.tar.gz 37900456 RMD160 3bd5abe6fdf4e1574b6fda4b2e85cfbf171fbab4 SHA1 60a50581ac93fc850225a929cc0c04dec0e51f36 SHA256 1b2cd679a1cbb1b6971291beac5d68ae55be538691c1fc8164f936899b8a913b
-EBUILD emacs-cvs-22.0.97.ebuild 7328 RMD160 c85f53733ac59fafc05c2670c4824b64a281bc72 SHA1 dda1edc654567fb8ed4981850eeb334ecd6adff7 SHA256 d627aaaebfd04a762e44f32929848b94210f144eb8fde3287bf25ebedb3c0307
-MD5 b4a973e685de187c6a5e227a78947568 emacs-cvs-22.0.97.ebuild 7328
-RMD160 c85f53733ac59fafc05c2670c4824b64a281bc72 emacs-cvs-22.0.97.ebuild 7328
-SHA256 d627aaaebfd04a762e44f32929848b94210f144eb8fde3287bf25ebedb3c0307 emacs-cvs-22.0.97.ebuild 7328
-EBUILD emacs-cvs-22.0.9999-r9.ebuild 7483 RMD160 119f4322b49d1bf504a42b3dc90f45c91a487c8e SHA1 a6a531bc526720dab7666b3ad323db0cf492dcfd SHA256 a81fbf37543afe71e9b560379a0132dfa720c4a3cee7811a39d1facbc90dfa1d
-MD5 8ab430c86df1cf316cff27a2ac7c6178 emacs-cvs-22.0.9999-r9.ebuild 7483
-RMD160 119f4322b49d1bf504a42b3dc90f45c91a487c8e emacs-cvs-22.0.9999-r9.ebuild 7483
-SHA256 a81fbf37543afe71e9b560379a0132dfa720c4a3cee7811a39d1facbc90dfa1d emacs-cvs-22.0.9999-r9.ebuild 7483
-EBUILD emacs-cvs-23.0.0-r5.ebuild 7705 RMD160 15751429758155eecd02cbbeeb43f4a453ca3a35 SHA1 5d08534e1b68b5babc3dbab49c6f7d95ffeaaae1 SHA256 56a8ce6b3cf2afb5a5cbae8aa86385dabb5ef3a485de0a6ec9bfd6702b718185
-MD5 e10f263b5193b4dcc8226500297f0f63 emacs-cvs-23.0.0-r5.ebuild 7705
-RMD160 15751429758155eecd02cbbeeb43f4a453ca3a35 emacs-cvs-23.0.0-r5.ebuild 7705
-SHA256 56a8ce6b3cf2afb5a5cbae8aa86385dabb5ef3a485de0a6ec9bfd6702b718185 emacs-cvs-23.0.0-r5.ebuild 7705
-MISC ChangeLog 9772 RMD160 42c8b140ef38bdbeab0ea2f3969d4a22304a21d8 SHA1 7c94a8399e6c24daed067012620db507daacbd35 SHA256 0a59f56774b4d4bc5ef72066f9a9d517a34869325c35d16af71ffe2b97953b99
-MD5 bc8e2287bf2526bd2f7dfc8961678e09 ChangeLog 9772
-RMD160 42c8b140ef38bdbeab0ea2f3969d4a22304a21d8 ChangeLog 9772
-SHA256 0a59f56774b4d4bc5ef72066f9a9d517a34869325c35d16af71ffe2b97953b99 ChangeLog 9772
+EBUILD emacs-cvs-22.0.97.ebuild 7359 RMD160 f0f483ecc893cbdd1ef012f27d2747553c8ae913 SHA1 de47b43def735a7fe3852fc5aead1dbd87e3105f SHA256 252f0cf3735b5ce7bb1b7c20dbf58e260b9f099884b809f390505c496fffd134
+MD5 c132f62387369650de04e79c5e1c654b emacs-cvs-22.0.97.ebuild 7359
+RMD160 f0f483ecc893cbdd1ef012f27d2747553c8ae913 emacs-cvs-22.0.97.ebuild 7359
+SHA256 252f0cf3735b5ce7bb1b7c20dbf58e260b9f099884b809f390505c496fffd134 emacs-cvs-22.0.97.ebuild 7359
+EBUILD emacs-cvs-22.0.9999-r9.ebuild 7514 RMD160 c2527841537126fae5f30aed638ed3ce7f232379 SHA1 ee1db107c7799d72c53b9b4bb1762b9e2b5fd062 SHA256 0dbf9b22f4cca43a769e3087be0381d76bcfaffaa1bbd790f7997985cbce5961
+MD5 aec69854b8305ee2d8cbb601d1981980 emacs-cvs-22.0.9999-r9.ebuild 7514
+RMD160 c2527841537126fae5f30aed638ed3ce7f232379 emacs-cvs-22.0.9999-r9.ebuild 7514
+SHA256 0dbf9b22f4cca43a769e3087be0381d76bcfaffaa1bbd790f7997985cbce5961 emacs-cvs-22.0.9999-r9.ebuild 7514
+EBUILD emacs-cvs-23.0.0-r5.ebuild 7751 RMD160 854ebb8b275f30aeecd1c41106d8ed285c42cefc SHA1 75fa56720f58b8f74d1734ba312c78f68e1ae349 SHA256 9521b9f079df149f1c20a58d9472aa40f41ec09c5fdd155db955af9bb270ac53
+MD5 833afb759a61872e16eb4db80da33111 emacs-cvs-23.0.0-r5.ebuild 7751
+RMD160 854ebb8b275f30aeecd1c41106d8ed285c42cefc emacs-cvs-23.0.0-r5.ebuild 7751
+SHA256 9521b9f079df149f1c20a58d9472aa40f41ec09c5fdd155db955af9bb270ac53 emacs-cvs-23.0.0-r5.ebuild 7751
+MISC ChangeLog 9944 RMD160 f92cbd2bcf7fe0037425149b70f66fc65455907a SHA1 5039b7a4e67c959a4e403e4c3c9c17685060f590 SHA256 49a2ab13d0ff62016096fc70b84fbdc47c6a61e109b6bf0d0fc24b6152c1dd74
+MD5 a949cc20612b2ac1fc16b5a4a28fb04b ChangeLog 9944
+RMD160 f92cbd2bcf7fe0037425149b70f66fc65455907a ChangeLog 9944
+SHA256 49a2ab13d0ff62016096fc70b84fbdc47c6a61e109b6bf0d0fc24b6152c1dd74 ChangeLog 9944
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
